--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,8 @@ pygments: true
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : Stasis box
-tagline: Open it, there might be a tcheran board.
+title : The Microbog
+tagline: Puddling thoughts...
 author :
   name : Richard Littauer
   email : richard.littauer@gmail.com
@@ -26,7 +26,7 @@ author :
 # Else if you are pushing to username.github.com, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://username.github.com
+production_url : http://richardlitt.github.com
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
