--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@
 permalink: /:categories/:year/:month/:day/:title 
 
 exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
-auto: true
-pygments: true
+# auto: true
+highlander: true
 markdown: kramdown
 
 # Themes are encouraged to use these universal variables 
