--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,8 @@ permalink: /:categories/:year/:month/:day/:title
 
 exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
 # auto: true
+gems:
+  - jekyll-redirect-from
 highlander: true
 markdown: kramdown
 
