Add project collections templates and rake task

--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,11 @@ author :
   twitter : RichLitt
   #feedburner : feedname
 
+collections:
+  projects:
+    output: true
+    permalink: /projects/:path/
+
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt
 # Most places will/should use BASE_PATH to make the urls
