Changed email to richard@burntfen.com

--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ title : a b/og
 tagline: Puddling thoughts...
 author :
   name : Richard Littauer
-  email : richard.littauer@gmail.com
+  email : richard@burntfen.com
   github : RichardLitt
   twitter : RichLitt
   #feedburner : feedname
