Add the Litt Review

--- a/_config.yml
+++ b/_config.yml
@@ -28,6 +28,9 @@ collections:
   projects:
     output: true
     permalink: /projects/:path/
+  reviews:
+    output: true
+    permalink: /the-litt-review/:path/
 
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt
@@ -134,4 +137,3 @@ JB :
   # and include your custom code. Your custom file must be defined at:
   #   ./_includes/custom/[HELPER]
   # where [HELPER] is the name of the helper you are overriding.
-
