--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,8 @@ markdown: kramdown
 # Themes are encouraged to use these universal variables
 # so be sure to set them if your theme uses them.
 #
-title : a b/og
-tagline: Puddling thoughts...
+title : Burnt Fen Creative
+tagline: Poetry // Code // UX // Open Source // Nomadism // Books // Coffee // Linguistics. Not in that order.
 author :
   name : Richard Littauer
   email : richard@burntfen.com
