--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ collections:
 # Else if you are pushing to username.github.com, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://richardlitt.github.com
+production_url : https://burntfen.com
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
