--- a/_config.yml
+++ b/_config.yml
@@ -94,18 +94,18 @@ JB :
   # Set 'provider' to false to turn commenting off globally.
   #
   comments :
-    provider : disqus
-    disqus :
-      short_name : richardlitt
-    livefyre :
-      site_id : 123
-    intensedebate :
-      account : 123abc
-    facebook:
-      appid : 289508827791353
-      num_posts: 5
-      width: 580
-      colorscheme: light
+    # provider : disqus
+    # disqus :
+    #   short_name : richardlitt
+    # livefyre :
+    #   site_id : 123
+    # intensedebate :
+    #   account : 123abc
+    # facebook:
+    #   appid : 289508827791353
+    #   num_posts: 5
+    #   width: 580
+    #   colorscheme: light
 
   # Settings for analytics helper
   # Set 'provider' to the analytics provider you want to use.
