--- a/_data/press.yml
+++ b/_data/press.yml
@@ -48,3 +48,7 @@
   title: "This mom will review your website for $75"
   url: http://thenextweb.com/dd/2015/05/19/guys-mom-will-review-website-75/
 
+- source: cbc
+  image: CBC_Radio-Canada_logo.png
+  title: "CBC Daybreak - Silent Book Club host interview"
+  url: https://silentbook.club
