--- a/_data/press.yml
+++ b/_data/press.yml
@@ -56,22 +56,22 @@
   title: "CBC Daybreak - Silent Book Club host interview"
   url: https://silentbook.club
 
-- source: Heart Breakfast (Bath)
+- source: "Heart Breakfast (Bath)"
   hide: true
 
 - source: 6pr.au
   hide: true
 
-- source: The Sun
+- source: "The Sun"
   hide: true
-  date: April 26, 2010
+  date: "April 26, 2010"
   title: "Avatar fan speaks film lingo Na'vi"
   url: http://www.thesun.co.uk/sol/homepage/news/2946833/Avatar-fan-speaks-film-lingo-Navi.html
 
-- source: Bushwick Daily
+- source: "Bushwick Daily"
   hide: true
-  date:  January 2, 2014
-  title: Bushwick Newsy Round Up: Post-Holidays edition
+  date:  "January 2, 2014"
+  title: "Bushwick Newsy Round Up: Post-Holidays edition"
   url: http://bushwickdaily.com/2014/01/bushwick-newsy-round-up-post-holidays-edition
 
 - source: STV
