--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "My personal website",
   "main": "-",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "bundle exec jekyll serve"
   },
   "repository": {
     "type": "git",
