--- a/_data/press.yml
+++ b/_data/press.yml
@@ -79,3 +79,8 @@
   date: "April 18, 2014"
   title: "Mario Meadows Map Gives Edinburgh Park Nintendo Names"
   url: http://edinburgh.stv.tv/articles/272112-mario-meadows-map-gives-edinburgh-park-nintendo-names/?fromstreampost=100166
+
+- source: vox
+  image: vox.png
+  title: "It’s not your fault online shopping is confusing. It’s a design problem."
+  url: https://www.vox.com/the-goods/2018/10/5/17879072/ecommerce-ux-design-problems
