Adding The Road to Mecca

--- a/_data/press.yml
+++ b/_data/press.yml
@@ -96,3 +96,9 @@
   title: "Orlando in As You Like It"
   date: "February 2020"
   hide: true
+
+- source: "Seven Days"
+  url: https://www.sevendaysvt.com/vermont/theater-review-as-you-like-it-plainfield-little-theatre/Content?oid=29689871
+  title: "Theater review: 'As You Like It,' Plainfield Little Theatre"
+  date: "February 19, 2020"
+  hide: true
