--- a/_data/press.yml
+++ b/_data/press.yml
@@ -1,19 +1,21 @@
-- source: boston-globe
-  image: boston-globe.jpg
-  date: April 6, 2014
-  title: "Yes, writing languages for ‘Game of Thrones’ is a real job"
-  url: https://www.bostonglobe.com/ideas/2014/04/05/yes-writing-languages-for-game-thrones-real-job/4eyOZKW5EVL6Mt8qBQJ20L/story.html
+# Removed due to licensing issues
+# - source: boston-globe
+#   image: boston-globe.jpg
+#   date: April 6, 2014
+#   title: "Yes, writing languages for ‘Game of Thrones’ is a real job"
+#   url: https://www.bostonglobe.com/ideas/2014/04/05/yes-writing-languages-for-game-thrones-real-job/4eyOZKW5EVL6Mt8qBQJ20L/story.html
 
 - source: gizmodo
   image: gizmodo.jpg
   title: "I Paid a UX Expert $100 to Get Drunk and Evaluate Gizmodo's Design"
   url: http://gizmodo.com/i-paid-a-ux-expert-100-to-get-drunk-and-evaluate-gizmo-1693902126
 
-- source: nyt
-  image: nyt.jpg
-  date: December 11, 2011
-  title: "Athhilezar? Watch Your Fantasy World Language"
-  url: http://www.nytimes.com/2011/12/12/arts/television/in-game-of-thrones-a-language-to-make-the-world-feel-real.html
+# Removed due to licensing issues
+# - source: nyt
+#   image: nyt.jpg
+#   date: December 11, 2011
+#   title: "Athhilezar? Watch Your Fantasy World Language"
+#   url: http://www.nytimes.com/2011/12/12/arts/television/in-game-of-thrones-a-language-to-make-the-world-feel-real.html
 
 - source: vice
   image: vice.jpg
