--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "-",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "bundle exec jekyll serve"
+    "start": "bundle exec jekyll serve",
+    "images": "gulp images && gulp project-img"
   },
   "repository": {
     "type": "git",
