--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "richardlitt.github.com",
   "version": "1.0.0",
   "description": "My personal website",
+  "engines": "14.15",
   "main": "-",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
