Add Hardwick paper

--- a/_data/press.yml
+++ b/_data/press.yml
@@ -104,3 +104,8 @@
   title: "Theater review: 'As You Like It,' Plainfield Little Theatre"
   date: "February 19, 2020"
   hide: true
+
+- source: "The Hardwick Gazette"
+  title: "As You Like It Spans Ages"
+  date: "February 19, 2020"
+  hide: true
