--- a/_data/microposts.yml
+++ b/_data/microposts.yml
@@ -2,4 +2,4 @@
   date: "2023-07-20T16:45:59Z"
 
 - post: "I've made a new page that I can throw microposts at, so I can link to them from Mastodon, Twitter, BlueSky, whatever. This way they're published here first, and I retain copyright."
-  date: 2023-07-20T12:58:56-04:00 UTC-04:00
+  date: 2023-07-20T12:58:56Z
