--- a/_data/microposts.yml
+++ b/_data/microposts.yml
@@ -1,5 +1,7 @@
 - post: "this is a post"
   date: "2023-07-20T16:45:59Z"
+  tz: EDT
 
 - post: "I've made a new page that I can throw microposts at, so I can link to them from Mastodon, Twitter, BlueSky, whatever. This way they're published here first, and I retain copyright."
   date: 2023-07-20T12:58:56Z
+  tz: EDT
