Add three posts

--- a/_data/microposts.yml
+++ b/_data/microposts.yml
@@ -5,3 +5,12 @@
 - post: "I've made a new page that I can throw microposts at, so I can link to them from Mastodon, Twitter, BlueSky, whatever. This way they're published here first, and I retain copyright."
   date: 2023-07-20T12:58:56Z
   tz: EDT
+
+- post: " It’s not perfect, and I need to set up bridges to automatically post to other platforms. Ideally, though, I would publish here first."
+  date: 2023-07-20T17:21:14.477Z
+
+- post: "There’s of course more questions around image hosting, retweets or boosts, proper metadata and conforming to platform limits like character counts."
+  date: 2023-07-20T17:21:31.361Z
+
+- post: "Of course, I don't know how long I will use it, or if I will ultimately. But it's an interesting concept that I wanted to try. I'm tired of choosing which platform to post on."
+  date: 2023-07-20T17:21:58.255Z
