--- a/_data/press.yml
+++ b/_data/press.yml
@@ -20,7 +20,7 @@
 - source: vice
   image: vice.jpg
   title: "For $75, a Real-Life Mom Will Critique Your Website Design"
-  url: http://motherboard.vice.com/read/for-75-a-real-life-mom-will-critique-your-website-designe
+  url: https://www.vice.com/en/article/nzemy8/for-75-a-real-life-mom-will-critique-your-website-design
 
 - source: cnbc
   image: cnbc.jpg
