--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,8 @@ exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md", "
 highlander: true
 markdown: kramdown
 
+timezone: 'NZ'
+
 # Themes are encouraged to use these universal variables
 # so be sure to set them if your theme uses them.
 #
