--- a/_data/clients.yml
+++ b/_data/clients.yml
@@ -34,6 +34,10 @@
   image: mit.png
   project: Burnt Fen Creative
 
+- client: Mudwtr
+  image: mud_wtr.png
+  project: The User Is Drunk
+
 - client: Nock
   image: nock.png
   project: Maintainer Mountaineer
