--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gulp-uglify": "^3.0.2",
     "imagemin-pngcrush": "^6.0.0",
     "imagemin-pngquant": "^8.0.0",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "plumber": "^0.4.8"
   }
 }
